@@ -588,7 +588,7 @@ int gcd(int i1, int i2) {
 size_t unicode_length(const string &str) {
 	size_t l = str.length(), l2 = 0;
 	for(size_t i = 0; i < l; i++) {
-		if(str[i] > 0 || i == 0 || str[i - 1] > 0) {
+		if(str[i] > 0 || (unsigned char) str[i] >= 0xC2) {
 			l2++;
 		}
 	}
@@ -597,7 +597,7 @@ size_t unicode_length(const string &str) {
 size_t unicode_length(const char *str) {
 	size_t l = strlen(str), l2 = 0;
 	for(size_t i = 0; i < l; i++) {
-		if(str[i] > 0 || i == 0 || str[i - 1] > 0) {
+		if(str[i] > 0 || (unsigned char) str[i] >= 0xC2) {
 			l2++;
 		}
 	}
@@ -607,8 +607,9 @@ size_t unicode_length(const char *str) {
 bool text_length_is_one(const string &str) {
 	if(str.empty()) return false;
 	if(str.length() == 1) return true;
-	for(size_t i = 0; i < str.length(); i++) {
-		if(str[i] > 0) {
+	if(str[0] >= 0) return false;
+	for(size_t i = 1; i < str.length(); i++) {
+		if(str[i] > 0 || (unsigned char) str[i] >= 0xC2) {
 			return false;
 		}
 	}
